--- a/assets/style.css
+++ b/assets/style.css
@@ -34,5 +34,38 @@ body {
   border: none;
   font-size: medium;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
+#statusButton:hover {
+    background: #fff;
+    color: #2d66d2;
+    border: 1px solid #2d66d2;  
+}
+.header {
+    display: flex;
+    gap: 10px;
+}
+.select-wrapper
+{
+  border: 1px solid rgb(0, 0, 0);
+  margin-bottom: 10px;
+  padding: 5px;
+  width:120px;
+  height: 20px;
+  background:#fff;
+}
+
+.select-wrapper label
+{
+  font-size:small;
+  color: rgb(0, 0, 0);
+}
+
+select
+{
+    background:#fff;
+    width: 40%;
+    border:0px;
+    cursor: pointer;
+}
